# ThreadSleuth

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  parallel_engine
include/analysis/: EntropyCalculator.hpp  HashCalculator.hpp  MetadataParser.hpp  SignatureScanner.hpp
include/core/: Chunk.hpp  DiskReader.hpp  PartitionParser.hpp  ReportGenerator.hpp  ResultCollector.hpp  TaskQueue.hpp  ThreadPool.hpp
include/utils/: Timer.hpp
src/: main.cpp
src/analysis/: EntropyCalculator.cpp  HashCalculator.cpp  MetadataParser.cpp  SignatureScanner.cpp
src/core/: DiskReader.cpp  PartitionParser.cpp  ReportGenerator.cpp  TaskQueue.cpp  ThreadPool.cpp
tests/: test_threadpool.cpp
